# scrape-substack

./: .cursorrules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
scrape_substack/: newsletter.py  user.py  utils.py
tests/: test_newsletter.py  test_user.py
